# Novel_Rich

./: .env.example  .gitignore  NOVEL_AGENT_ARCHITECTURE.md  README.md  langgraph.json  langgraph_server.py  pyproject.toml  requirements.txt  run.py  system_prompt.md  visualize.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
diagrams/: novel_agent_flow.md  novel_agent_flow.mmd
novel/狗血财阀文/: SUMMARY.md
novel/狗血财阀文/chapters/: 00-简介.md  01-第一章.md  02-第二章.md  03-第三章.md  04-第四章.md  05-第五章.md  06-第六章.md  08-第八章.md  09-第九章.md  10-第十章.md  9-第九章.md
novel_agent/: __init__.py  graph.py  models.py  output.py  prompts.py  state.py  studio_graph.py  writing_skill.py
output/狗血财阀文/: character_state.md  characters.md  continuity_notes.md  full_draft.md  last_chapter_summary.md  novel_writing_skill.md  plot_memory.md  shared_writing_skill.md
output/狗血财阀文/chapters/: 10-chapter.md  11-chapter.md
output/狗血财阀文/plans/: 10-plan.md  11-plan.md
output/狗血财阀文/reviews/: 11-critique.md  latest_critique.md
output/狗血财阀文/summaries/: 11-summary.md
output/穿越恶毒女配嫁入财阀家族后反向改命/: characters.md  continuity_notes.md  full_draft.md  outline.md  world_bible.md
output/穿越恶毒女配嫁入财阀家族后反向改命/chapters/: 01-chapter.md
output/穿越恶毒女配嫁入财阀家族后反向改命/plans/: 01-plan.md  02-plan.md
output/穿越恶毒女配嫁入财阀家族后反向改命/reviews/: 02-critique.md
studio_results/: chapter_plan.md  critique.md  draft_01.md  last_chapter_summary.md
