[project]
name = "novel-agent"
version = "0.1.0"
description = "LangGraph novel writing agent workflow"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langgraph-cli[inmem]>=0.3.0",
  "langchain-openai>=0.2.0",
  "python-dotenv>=1.0.1"
]

[tool.setuptools.packages.find]
include = ["novel_agent*"]

